Working on issue 390 regarding invites to.  Threee instances of invites to found and changed to invitations to instead

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@ development:
   database: planner_development
   pool: 5
   host: localhost
- # username: codebar
- # password: secret
+  username: codebar
+  password: secret
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -16,7 +16,5 @@ test:
   database: planner_test
   pool: 5
   host: localhost
-# username: codebar
-# password: secret
-
-
+  username: codebar
+  password: secret
