add code climate token

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ script:
   - bundle exec rake db:create
   - bundle exec rake db:schema:load
   - bundle exec rspec
+addons:
+  code_climate:
+    repo_token: 9b6a47d42b4a745a38818eac18dba4ca94ea88f8c7751859ec49b8cedbf010fe
 rvm:
   - 2.2.4
 notifications:
