try using db:migrate in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 bundler_args: --without development
 script:
   - bundle exec rake db:create
-  - bundle exec rake db:schema:load
+  - bundle exec rake db:migrate
   - bundle exec rspec
 addons:
   code_climate:
