--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,12 @@
-development:
+development: &default
   adapter: postgresql
   encoding: unicode
   database: planner_development
   pool: 5
-  host: localhost
- # username: codebar
- # password: secret
+  username: postgres
+  password:
+  host: db
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: planner_test
-  pool: 5
-  host: localhost
-# username: codebar
-# password: secret
-
-
