Limiting number of records loaded on events#index

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,9 @@ development:
   encoding: unicode
   database: planner_development
   pool: 5
+  host: localhost
+ # username: codebar
+ # password: secret
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -12,3 +15,8 @@ test:
   encoding: unicode
   database: planner_test
   pool: 5
+  host: localhost
+# username: codebar
+# password: secret
+
+
