--- a/config/database.yml
+++ b/config/database.yml
@@ -3,10 +3,12 @@ development: &default
   encoding: unicode
   database: planner_development
   pool: 5
+  host: db
   username: postgres
   password:
-  host: db
 
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: planner_test
