--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-language: ruby
-bundler_args: --without development
+services:
+  - docker
+install: true
 script:
-  - bundle exec rake db:create
-  - bundle exec rake db:schema:load
-  - bundle exec rspec
+  - docker-compose build
+  - docker-compose run web bundle exec rake db:create db:schema:load
+  - docker-compose run web bundle exec rspec
 addons:
   code_climate:
     repo_token: 9b6a47d42b4a745a38818eac18dba4ca94ea88f8c7751859ec49b8cedbf010fe
