Ability for admins to archive job submissions

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,8 @@ development:
   encoding: unicode
   database: planner_development
   pool: 5
+  username: bonzo
+  password: postgres
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -12,3 +14,5 @@ test:
   encoding: unicode
   database: planner_test
   pool: 5
+  username: bonzo
+  password: postgres
