Increate rubocop line length to 100 chars

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,3 +4,6 @@ Style/Documentation:
 #Disabling rubocop for missing frozen string literal comment.
 Style/FrozenStringLiteralComment:
   Enabled: false
+#Increase line length from 80 chars
+Metrics/LineLength:
+  Max: 100
