--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
   web:
+    env_file:
+      - docker-compose.env
     build: .
     command:
       - bundle
