--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: ruby
 bundler_args: --without development
 rvm:
   - 2.5.5
+before_install:
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v '1.17.3'
 before_script:
   - bundle exec rake db:create db:schema:load
 
