--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 bundler_args: --without development
 rvm:
   - 2.4.2
+services:
+  - postgresql
 before_script:
   - bundle exec rake db:create db:schema:load
 
