--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
+dist: trusty
 language: ruby
 bundler_args: --without development
 rvm:
   - 2.4.2
+services:
+  - postgresql
 before_script:
   - bundle exec rake db:create db:schema:load
 
