--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 dist: xenial
 language: ruby
-bundler_args: --without development
 rvm:
   - 2.4.2
 services:
   - postgresql
+before_install:
+  - gem install bundler --version '~> 1.17.3' --no-document
+  - bundle _1.17.3_ install --without development
 before_script:
   - bundle exec rake db:create db:schema:load
 
