--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,7 @@ services:
       - docker-compose.env
     build: .
     command:
-      - bundle
-      - exec
-      - rails
+      - bin/rails
       - server
       - --binding=0.0.0.0
       - --port=3000
