--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ rvm:
   - 2.4.2
 services:
   - postgresql
+before_install:
+  - nvm install node
 before_script:
   - bundle exec rake db:create db:schema:load
 
