--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,18 +1,24 @@
-- name: Stale Issues manager
-  uses: actions/stale@v3.0.14
-  with:
-    repo-token:  ${{ secrets.GITHUB_TOKEN }}
-    stale-issue-message: This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions.
-    stale-pr-message: This PR has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions.
-    close-issue-message:
-    close-pr-message:
-    days-before-stale: 90
-    days-before-close: 30
-    stale-issue-label: # optional, default is Stale
-    close-issue-label: # optional
-    exempt-issue-labels:
-      - pinned
-      - security
-    exempt-pr-labels:
-      - pinned
-      - security
+
+name: "Stale issue handler"
+on:
+  workflow_dispatch:
+  schedule:
+  - cron: "0 0 * * *"
+
+jobs:
+  stale:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/stale@v3.0.14
+        with:
+          repo-token:  ${{ secrets.GITHUB_TOKEN }}
+          stale-issue-message: This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions.
+          stale-pr-message: This PR has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions.
+          close-issue-message: Closing as stale.
+          close-pr-message: Closing as stale.
+          days-before-stale: 90
+          days-before-close: 30
+          stale-issue-label: stale # optional, default is Stale
+          close-issue-label: stale # optional
+          exempt-issue-labels: pinned, security
+          exempt-pr-labels: pinned, security
