--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        gem install bundler
+        gem install bundler -v 1.17.3
         bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
 
@@ -44,3 +44,7 @@ jobs:
         DATABASE_URL: postgres://postgres:@localhost:5432/test
         RAILS_ENV: test
       run: bundle exec rake spec
+    - name: Report to Coveralls
+      uses: coverallsapp/github-action@v1.1.2
+      with:
+        github-token: ${{ secrets.github_token }}
