--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,12 +25,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.4.2
-
-    - name: Install dependencies
-      run: |
-        gem install bundler -v 1.17.3
-        bundle config path vendor/bundle
-        bundle install --jobs 4 --retry 3
+        bundler-cache: true
 
     - name: Setup test database
       env:
